--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
 		-->
 		<link rel="stylesheet" href="style_reset.css" />
-		<title>React App</title>
+		<title>HawkEye</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
